Added multiple fields to the sheet and edited the regeneration strings

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,9 +8,17 @@
   "anima.ui.aspectSection.height.title": "Height",
   "anima.ui.aspectSection.race.title": "Race",
   "anima.ui.aspectSection.ethnicity.title": "Ethnicity",
+  "anima.ui.aspectSection.creatureType.title": "Creature Type",
   "anima.ui.aspectSection.size.title": "Size",
   "anima.ui.aspectSection.title": "Aspect",
   "anima.ui.aspectSection.weight.title": "Weight",
+  "anima.ui.aspectSection.sizeType.minuscule":"Minuscule",
+  "anima.ui.aspectSection.sizeType.small":"Small",
+  "anima.ui.aspectSection.sizeType.medium":"Medium",
+  "anima.ui.aspectSection.sizeType.large":"Large",
+  "anima.ui.aspectSection.sizeType.huge":"Huge",
+  "anima.ui.aspectSection.sizeType.gargantuan":"Gargantuan",
+  "anima.ui.aspectSection.sizeType.colossal":"Colossal",
   "anima.ui.characteristics.agility": "Agility",
   "anima.ui.characteristics.constitution": "Constitution",
   "anima.ui.characteristics.dexterity": "Dexterity",
@@ -77,6 +85,8 @@
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
   "anima.ui.combat.baseValues.extraDamage.title": "Extra damage",
   "anima.ui.combat.baseValues.title": "Base Values",
+  "anima.ui.combat.baseValues.attacks.title": "Attacks",
+  "anima.ui.combat.baseValues.defenses.title": "Defenses",
   "anima.ui.combat.baseValues.wearArmor.title": "Wear armor",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
   "anima.ui.combat.combatTables.title": "Combat tables",
@@ -196,7 +206,10 @@
   "anima.ui.general.movement.running.title": "Running",
   "anima.ui.general.movementType.title": "Mov. type",
   "anima.ui.general.naturalPenalty.title": "Natural pen.",
-  "anima.ui.general.presence.title": "Presence",
+  "anima.ui.general.presenceGnosisAndNatura.title": "Presence, Gnosis and Natura ",
+  "anima.ui.general.presenceGnosisAndNatura.presence": "Presence",
+  "anima.ui.general.presenceGnosisAndNatura.gnosis": "Gnosis",
+  "anima.ui.general.presenceGnosisAndNatura.natura": "Natura",
   "anima.ui.general.regeneration.all.title": "Todos",
   "anima.ui.general.regeneration.penaltyReduction.title": "Penalty Reduction",
   "anima.ui.general.regeneration.regenerationType.title": "Regen. type",
@@ -209,25 +222,25 @@
   "anima.ui.general.regeneration.special.title": "Special",
   "anima.ui.general.regeneration.special.0.title": "",
   "anima.ui.general.regeneration.special.1.title": "",
-  "anima.ui.general.regeneration.special.10.title": "As above, but in one day",
-  "anima.ui.general.regeneration.special.11.title": "Any amputated limb is recovered by attaching the remains to the stump for one week.",
-  "anima.ui.general.regeneration.special.12.title": "As above, but in three days",
-  "anima.ui.general.regeneration.special.13.title": "As above, but in one day",
-  "anima.ui.general.regeneration.special.14.title": "Any limb is recovered by attaching it to the stump for a few hours.",
-  "anima.ui.general.regeneration.special.15.title": "Any limb recovers immediately if attached to the stump during an assault. Except for the head, any amputated limb grows back within a week.",
-  "anima.ui.general.regeneration.special.16.title": "Except for the head, any amputated limb grows back within a day.",
-  "anima.ui.general.regeneration.special.17.title": "Except for the head, any amputated limb grows back in a few minutes.",
-  "anima.ui.general.regeneration.special.18.title": "Except for the head, any amputated limb grows back in a few rounds.",
-  "anima.ui.general.regeneration.special.19.title": "Any severed limb grows and is fully functional in an assault",
+  "anima.ui.general.regeneration.special.10.title": "No scarring. The character does not suffer the effects of exsanguination. Cleanly amputated limbs recover if they are attached to the stump for one day. The character automatically overcomes the state between life and death.",
+  "anima.ui.general.regeneration.special.11.title": "No scarring. The character does not suffer the effects of exsanguination. Any amputated limb is recovered by attaching the remains to the stump for one week.The character automatically overcomes the state between life and death." ,
+  "anima.ui.general.regeneration.special.12.title": "No scarring. The character does not suffer the effects of exsanguination. Any amputated limb is recovered by attaching the remains to the stump for three days.The character automatically overcomes the state between life and death.",
+  "anima.ui.general.regeneration.special.13.title": "No scarring. The character does not suffer the effects of exsanguination. Any amputated limb is recovered by attaching the remains to the stump for one day.The character automatically overcomes the state between life and death.",
+  "anima.ui.general.regeneration.special.14.title": "No scarring. The character does not suffer the effects of exsanguination. Any limb is recovered by attaching it to the stump for a few hours. The character automatically overcomes the state between life and death.",
+  "anima.ui.general.regeneration.special.15.title": "No scarring. The character does not suffer the effects of exsanguination. Any limb recovers immediately if attached to the stump during an assault. Except for the head, any amputated limb grows back within a week. The character automatically overcomes the state between life and death.",
+  "anima.ui.general.regeneration.special.16.title": "No scarring. The character does not suffer the effects of exsanguination. Any limb recovers immediately if attached to the stump during an assault. Except for the head, any amputated limb grows back within a day. The character automatically overcomes the state between life and death.", 
+  "anima.ui.general.regeneration.special.17.title": "No scarring. The character does not suffer the effects of exsanguination. Any limb recovers immediately if attached to the stump during an assault. Except for the head, any amputated limb grows back in a few minutes. The character automatically overcomes the state between life and death.",
+  "anima.ui.general.regeneration.special.18.title": "No scarring. The character does not suffer the effects of exsanguination. Any limb recovers immediately if attached to the stump during an assault. Except for the head, any amputated limb grows back in a few rounds. The character automatically overcomes the state between life and death." ,
+  "anima.ui.general.regeneration.special.19.title": "No scarring. The character does not suffer the effects of exsanguination. Any severed limb grows and is fully functional in an assault. The character automatically overcomes the state between life and death.",
   "anima.ui.general.regeneration.special.2.title": "",
-  "anima.ui.general.regeneration.special.20.title": "All physical critics are cancelled",
-  "anima.ui.general.regeneration.special.3.title": "",
+  "anima.ui.general.regeneration.special.20.title": "No scarring. The character does not suffer the effects of exsanguination. The character automatically overcomes the state between life and death. All physical critics are cancelled",
+  "anima.ui.general.regeneration.special.3.title": "", 
   "anima.ui.general.regeneration.special.4.title": "",
   "anima.ui.general.regeneration.special.5.title": "No scarring",
-  "anima.ui.general.regeneration.special.6.title": "The character does not suffer the effects of exsanguination.",
-  "anima.ui.general.regeneration.special.7.title": "Cleanly amputated limbs recover if they are attached to the stump for one week.",
-  "anima.ui.general.regeneration.special.8.title": "As above, but in five days",
-  "anima.ui.general.regeneration.special.9.title": "As above, but in three days. The character automatically overcomes the state between life and death.",
+  "anima.ui.general.regeneration.special.6.title": "No scarring. The character does not suffer the effects of exsanguination.",
+  "anima.ui.general.regeneration.special.7.title": "No scarring. The character does not suffer the effects of exsanguination. Cleanly amputated limbs recover if they are attached to the stump for one week.",
+  "anima.ui.general.regeneration.special.8.title": "No scarring. The character does not suffer the effects of exsanguination. Cleanly amputated limbs recover if they are attached to the stump for five days",
+  "anima.ui.general.regeneration.special.9.title": "No scarring. The character does not suffer the effects of exsanguination. Cleanly amputated limbs recover if they are attached to the stump for three days. The character automatically overcomes the state between life and death.",
   "anima.ui.general.regeneration.title": "Regeneration",
   "anima.ui.general.tabs.first": "Character",
   "anima.ui.general.tabs.second": "Details",
