--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -8,9 +8,17 @@
   "anima.ui.aspectSection.height.title": "Altura",
   "anima.ui.aspectSection.race.title": "Raza",
   "anima.ui.aspectSection.ethnicity.title": "Etnia",
+  "anima.ui.aspectSection.creatureType.title": "Tipo de Criatura",
   "anima.ui.aspectSection.size.title": "Tamaño",
   "anima.ui.aspectSection.title": "Aspecto",
   "anima.ui.aspectSection.weight.title": "Peso",
+  "anima.ui.aspectSection.sizeType.minuscule":"Minusculo",
+  "anima.ui.aspectSection.sizeType.small":"Pequeño",
+  "anima.ui.aspectSection.sizeType.medium":"Medio",
+  "anima.ui.aspectSection.sizeType.large":"Grande",
+  "anima.ui.aspectSection.sizeType.huge":"Enorme",
+  "anima.ui.aspectSection.sizeType.gargantuan":"Gigantesco",
+  "anima.ui.aspectSection.sizeType.colossal":"Colosal",
   "anima.ui.characteristics.agility": "Agilidad",
   "anima.ui.characteristics.constitution": "Constitución",
   "anima.ui.characteristics.dexterity": "Destreza",
@@ -77,6 +85,8 @@
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
   "anima.ui.combat.baseValues.extraDamage.title": "Daño extra",
   "anima.ui.combat.baseValues.title": "Valores base",
+  "anima.ui.combat.baseValues.attacks.title": "Ataques",
+  "anima.ui.combat.baseValues.defenses.title": "Defensas",
   "anima.ui.combat.baseValues.wearArmor.title": "Llevar armadura",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
   "anima.ui.combat.combatTables.title": "Tablas de combate",
@@ -196,7 +206,10 @@
   "anima.ui.general.movement.running.title": "Corriendo",
   "anima.ui.general.movementType.title": "Tipo mov.",
   "anima.ui.general.naturalPenalty.title": "Pen. Natural",
-  "anima.ui.general.presence.title": "Presencia",
+  "anima.ui.general.presenceGnosisAndNatura.title": "Presencia, Gnosis y Natura ",
+  "anima.ui.general.presenceGnosisAndNatura.presence": "Presencia",
+  "anima.ui.general.presenceGnosisAndNatura.gnosis": "Gnosis",
+  "anima.ui.general.presenceGnosisAndNatura.natura": "Natura",
   "anima.ui.general.regeneration.all.title": "Todos",
   "anima.ui.general.regeneration.penaltyReduction.title": "Reducción de Negativos",
   "anima.ui.general.regeneration.regenerationType.title": "Tipo regen.",
@@ -209,25 +222,25 @@
   "anima.ui.general.regeneration.special.title": "Especial",
   "anima.ui.general.regeneration.special.0.title": "",
   "anima.ui.general.regeneration.special.1.title": "",
-  "anima.ui.general.regeneration.special.10.title": "Como el anterior, pero en un día",
-  "anima.ui.general.regeneration.special.11.title": "Cualquier miembro amputado se recupera, uniendo los restos al muñón durante una semana",
-  "anima.ui.general.regeneration.special.12.title": "Como el anterior, pero en tres días",
-  "anima.ui.general.regeneration.special.13.title": "Como el anterior, pero en un día",
-  "anima.ui.general.regeneration.special.14.title": "Cualquier miembro se recupera, uniéndolo al muñón durante unas pocas horas",
-  "anima.ui.general.regeneration.special.15.title": "Cualquier miembro se recupera inmediatamente si se une al muñón durante un asalto. Salvo la cabeza, cualquier miembro amputado vuelve a crecer en una semana",
-  "anima.ui.general.regeneration.special.16.title": "Salvo la cabeza, cualquier miembro amputado vuelve a crecer en un día",
-  "anima.ui.general.regeneration.special.17.title": "Salvo la cabeza, cualquier miembro amputado vuelve a crecer en pocos minutos",
-  "anima.ui.general.regeneration.special.18.title": "Salvo la cabeza, cualquier miembro amputado vuelve a crecer en pocos asaltos",
-  "anima.ui.general.regeneration.special.19.title": "Cualquier miembro seccionado crece y es completamente funcional en un asalto",
+  "anima.ui.general.regeneration.special.10.title": "No quedan cicatrices. Los miembros limpiamente amputados se recuperan si se unen al muñón durante un día. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
+  "anima.ui.general.regeneration.special.11.title": "No quedan cicatrices. Cualquier miembro amputado se recupera, uniendo los restos al muñón durante una semana. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
+  "anima.ui.general.regeneration.special.12.title": "No quedan cicatrices. Cualquier miembro amputado se recupera, uniendo los restos al muñón durante tres días. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
+  "anima.ui.general.regeneration.special.13.title": "No quedan cicatrices. Cualquier miembro amputado se recupera, uniendo los restos al muñón durante un día. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
+  "anima.ui.general.regeneration.special.14.title": "No quedan cicatrices. Cualquier miembro se recupera, uniéndolo al muñón durante unas pocas horas. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
+  "anima.ui.general.regeneration.special.15.title": "No quedan cicatrices. Cualquier miembro se recupera inmediatamente si se une al muñón durante un asalto. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte. Salvo la cabeza, cualquier miembro amputado vuelve a crecer en una semana",
+  "anima.ui.general.regeneration.special.16.title": "No quedan cicatrices. Cualquier miembro se recupera inmediatamente si se une al muñón durante un asalto. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte. Salvo la cabeza, cualquier miembro amputado vuelve a crecer en una semana un día",
+  "anima.ui.general.regeneration.special.17.title": "No quedan cicatrices. Cualquier miembro se recupera inmediatamente si se une al muñón durante un asalto. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte. Salvo la cabeza, cualquier miembro amputado vuelve a crecer en una semana pocos minutos",
+  "anima.ui.general.regeneration.special.18.title": "No quedan cicatrices. Cualquier miembro se recupera inmediatamente si se une al muñón durante un asalto. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte.S alvo la cabeza, cualquier miembro amputado vuelve a crecer en una semana pocos asaltos",
+  "anima.ui.general.regeneration.special.19.title": "No quedan cicatrices. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte. Cualquier miembro seccionado crece y es completamente funcional en un asalto",
   "anima.ui.general.regeneration.special.2.title": "",
-  "anima.ui.general.regeneration.special.20.title": "Todos los críticos físicos son anulados",
+  "anima.ui.general.regeneration.special.20.title": "No quedan cicatrices. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte. Cualquier miembro seccionado crece y es completamente funcional en un asalto. Todos los críticos físicos son anulados",
   "anima.ui.general.regeneration.special.3.title": "",
   "anima.ui.general.regeneration.special.4.title": "",
   "anima.ui.general.regeneration.special.5.title": "No quedan cicatrices",
-  "anima.ui.general.regeneration.special.6.title": "El personaje no sufre los efectos del desangramiento",
-  "anima.ui.general.regeneration.special.7.title": "Los miembros limpiamente amputados se recuperan si se unen al muñón durante una semana",
-  "anima.ui.general.regeneration.special.8.title": "Como el anterior, pero en cinco días",
-  "anima.ui.general.regeneration.special.9.title": "Como el anterior, pero en tres días. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
+  "anima.ui.general.regeneration.special.6.title": "No quedan cicatrices. El personaje no sufre los efectos del desangramiento",
+  "anima.ui.general.regeneration.special.7.title": "No quedan cicatrices. Los miembros limpiamente amputados se recuperan si se unen al muñón durante una semana",
+  "anima.ui.general.regeneration.special.8.title": "No quedan cicatrices. Los miembros limpiamente amputados se recuperan si se unen al muñón durante cinco días",
+  "anima.ui.general.regeneration.special.9.title": "No quedan cicatrices. Los miembros limpiamente amputados se recuperan si se unen al muñón durante tres días. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
   "anima.ui.general.regeneration.title": "Regeneración",
   "anima.ui.general.tabs.first": "Personaje",
   "anima.ui.general.tabs.second": "Detalles",
