--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -196,7 +196,7 @@
   "anima.ui.general.movement.running.title": "Course",
   "anima.ui.general.movementType.title": "Type Mov.",
   "anima.ui.general.naturalPenalty.title": "Malus Naturel",
-  "anima.ui.general.presence.title": "Présence",
+  "anima.ui.general.presenceGnosisAndNatura.title": "Présence",
   "anima.ui.general.regeneration.all.title": "Todos",
   "anima.ui.general.regeneration.penaltyReduction.title": "Réduction des négatifs",
   "anima.ui.general.regeneration.regenerationType.title": "Type régén.",
