--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -421,7 +421,7 @@
   "anima.ui.secondaries.piloting.title": "Piloter",
   "anima.ui.secondaries.poisons.title": "Poisons",
   "anima.ui.secondaries.puppetMaking.title": "Fabrication de Poupée",
-  "anima.ui.secondaries.ride.title": "Equitaion",
+  "anima.ui.secondaries.ride.title": "Equitation",
   "anima.ui.secondaries.ritualCalligraphy.title": "Rituel Calligraphique",
   "anima.ui.secondaries.runes.title": "Runes",
   "anima.ui.secondaries.science.title": "Science",
@@ -459,7 +459,7 @@
   "anima.ui.settings.advancedSettings.openRolls.title": "Marge d'ouverte",
   "anima.ui.settings.advancedSettings.title": "Paramètres avancés",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Arrondir au multiple de 5. Applicable aux dégâts",
-  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "Arrondire à la baisse les dégâts (multiple de 5 le plus proche)?",
+  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "Arrondir à la baisse les dégâts (multiple de 5 le plus proche)?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Dans la gestion du sytème de combat, la case \"Show roll\" sera cochée par défaut en fonction de cette valeur",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Montrer les jets automitquement au MJ dans un combat",
   "anima.ui.systemSettings.useCombatTable.title": "Utiliser la table de combat",
@@ -569,8 +569,8 @@
   "macros.combat.dialog.error.noActorAssociatedToYourToken.title": "Votre token n'a aucun acteur associé",
   "macros.combat.dialog.error.noExistTokenAnymore.title": "Le Token {token} n'existe plus",
   "macros.combat.dialog.error.noGMActive.title": "Actuellement le MJ n'est pas connecté. Vous ne pouvez pas attaquer.",
-  "macros.combat.dialog.error.noSelectedActor.title": "Vous n'avez pas sélectionner un personnage",
-  "macros.combat.dialog.error.noSelectedToken.title": "Vous n'avez pas sélectionner un attaquant",
+  "macros.combat.dialog.error.noSelectedActor.title": "Vous n'avez pas sélectionné un personnage",
+  "macros.combat.dialog.error.noSelectedToken.title": "Vous n'avez pas sélectionné un attaquant",
   "macros.combat.dialog.error.multipleSelectedToken.title": "Vous ne pouvez sélectionner qu'une seule attaquant",
   "macros.combat.dialog.error.noTokenInCurrentScene.title": "Vous n'avez la possession d'aucun token dans la scène en cours",
   "macros.combat.dialog.error.notInActiveScene.title": "Vous ne pouvez pas attaquer tant que vous n'êtes pas dans une scène active",
@@ -622,7 +622,7 @@
   "macros.combat.dialog.weaponRow.attack.title": "{name} avec {value} attaque",
   "macros.combat.dialog.weaponRow.defense.title": "{name} avec {value} défense",
   "macros.combat.dialog.weaponUsed.title": "Arme",
-  "macros.combat.dialog.winner.title": " vainceur de cet assaut",
+  "macros.combat.dialog.winner.title": " vainqueur de cet assaut",
   "macros.damageCalculator.dialog.attack.title": "Attaque",
   "macros.damageCalculator.dialog.damage.title": "Dégâts",
   "macros.damageCalculator.dialog.defense.title": "Défense",
