--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -120,7 +120,7 @@
   "anima.ui.combat.weapons.presence.base.title": "Base présence",
   "anima.ui.combat.weapons.presence.final.title": "Présence",
   "anima.ui.combat.weapons.quality.title": "Qualité",
-  "anima.ui.combat.weapons.range.base.title": "Base de protée (m)",
+  "anima.ui.combat.weapons.range.base.title": "Base de portée (m)",
   "anima.ui.combat.weapons.range.final.title": "Portée (m)",
   "anima.ui.combat.weapons.reload.base.title": "Base rechargement",
   "anima.ui.combat.weapons.reload.final.title": "Rechargement",
