--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -23,7 +23,7 @@
   "anima.ui.combat.ammo.breaking.base.title": "Base fracassement",
   "anima.ui.combat.ammo.breaking.title": "Fracassement",
   "anima.ui.combat.ammo.critic.title": "Critique",
-  "anima.ui.combat.ammo.damage.base.title": "Base des dégâts",
+  "anima.ui.combat.ammo.damage.base.title": "Base de dégâts",
   "anima.ui.combat.ammo.damage.title": "Dégâts",
   "anima.ui.combat.ammo.integrity.base.title": "Base Solidité",
   "anima.ui.combat.ammo.integrity.title": "Solidité",
