--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -78,7 +78,7 @@
   "anima.ui.combat.baseValues.extraDamage.title": "Dommages accrus",
   "anima.ui.combat.baseValues.title": "Valeurs de Base",
   "anima.ui.combat.baseValues.wearArmor.title": "Port d'Armure",
-  "anima.ui.combat.combatSpecialSkill.title": "Compétences Spécial Skills",
+  "anima.ui.combat.combatSpecialSkill.title": "Compétences Spéciales",
   "anima.ui.combat.combatTables.title": "Tables des Combats",
   "anima.ui.combat.finalArmor.title": "Armure Finale",
   "anima.ui.combat.weapon.manageabilityType.oneHand.title": "1 main",
