--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -159,12 +159,12 @@
   "anima.ui.domine.martialArts.title": "Arts Martiaux",
   "anima.ui.domine.martialKnowledge.mk.title": "CM",
   "anima.ui.domine.martialKnowledge.title": "Connaissance Martiale",
-  "anima.ui.domine.nemesisSkills.title": "Pouvoirs Nemesis",
+  "anima.ui.domine.nemesisSkills.title": "Pouvoirs Némésis",
   "anima.ui.domine.seals.earth.title": "Terre",
   "anima.ui.domine.seals.major.title": "Majeur",
   "anima.ui.domine.seals.metal.title": "Métal",
   "anima.ui.domine.seals.minor.title": "Mineur",
-  "anima.ui.domine.seals.title": "Seals",
+  "anima.ui.domine.seals.title": "Sceaux",
   "anima.ui.domine.seals.water.title": "Eau",
   "anima.ui.domine.seals.wind.title": "Air",
   "anima.ui.domine.seals.wood.title": "Bois",
@@ -194,10 +194,10 @@
   "anima.ui.general.movement.maximum.title": "Max (m)",
   "anima.ui.general.movement.quarter.title": "1/4",
   "anima.ui.general.movement.running.title": "Course",
-  "anima.ui.general.movementType.title": "Type Mov.",
+  "anima.ui.general.movementType.title": "Type Mouv.",
   "anima.ui.general.naturalPenalty.title": "Malus Naturel",
   "anima.ui.general.presence.title": "Présence",
-  "anima.ui.general.regeneration.all.title": "Todos",
+  "anima.ui.general.regeneration.all.title": "Tous",
   "anima.ui.general.regeneration.penaltyReduction.title": "Réduction des négatifs",
   "anima.ui.general.regeneration.regenerationType.title": "Type régén.",
   "anima.ui.general.regeneration.resting.title": "Reposez-vous",
@@ -209,25 +209,25 @@
   "anima.ui.general.regeneration.special.title": "Spécial",
   "anima.ui.general.regeneration.special.0.title": "",
   "anima.ui.general.regeneration.special.1.title": "",
-  "anima.ui.general.regeneration.special.10.title": "Comme ci-dessus, mais en un seul jour",
-  "anima.ui.general.regeneration.special.11.title": "Tout membre amputé est récupéré en attachant les restes au moignon pendant une semaine.",
-  "anima.ui.general.regeneration.special.12.title": "Comme ci-dessus, mais en trois jours",
-  "anima.ui.general.regeneration.special.13.title": "Comme ci-dessus, mais en un jour",
-  "anima.ui.general.regeneration.special.14.title": "Tout membre est récupéré en l'attachant à la souche pendant quelques heures.",
-  "anima.ui.general.regeneration.special.15.title": "Tout membre récupère immédiatement s'il est attaché à la souche pendant un assaut. À l'exception de la tête, tout membre amputé repousse en une semaine.",
+  "anima.ui.general.regeneration.special.10.title": "Comme précédemment, mais en un jour",
+  "anima.ui.general.regeneration.special.11.title": "Tout membre amputé se recolle si il est maintenu contre le moignon pendant une semaine.",
+  "anima.ui.general.regeneration.special.12.title": "Comme précédemment, mais en trois jours",
+  "anima.ui.general.regeneration.special.13.title": "Comme précédemment, mais en un jour",
+  "anima.ui.general.regeneration.special.14.title": "Tout membre amputé se recolle si il est maintenu contre le moignon pendant quelques heures.",
+  "anima.ui.general.regeneration.special.15.title": "Tout membre amputé se recolle si il est maintenu contre le moignon pendant un tour. À l'exception de la tête, tout membre amputé repousse en une semaine.",
   "anima.ui.general.regeneration.special.16.title": "À l'exception de la tête, tout membre amputé repousse en un jour.",
   "anima.ui.general.regeneration.special.17.title": "À l'exception de la tête, tout membre amputé repousse en quelques minutes.",
-  "anima.ui.general.regeneration.special.18.title": "À l'exception de la tête, tout membre amputé repousse en quelques rounds.",
-  "anima.ui.general.regeneration.special.19.title": "Tout membre sectionné repousse et est entièrement fonctionnel lors d'un assaut.",
+  "anima.ui.general.regeneration.special.18.title": "À l'exception de la tête, tout membre amputé repousse en quelques tours.",
+  "anima.ui.general.regeneration.special.19.title": "Tout membre coupé repousse et redevient fonctionnel en un round.",
   "anima.ui.general.regeneration.special.2.title": "",
-  "anima.ui.general.regeneration.special.20.title": "Toutes les critiques physiques sont annulées",
+  "anima.ui.general.regeneration.special.20.title": "Toutes les Critiques physiques sont annulés",
   "anima.ui.general.regeneration.special.3.title": "",
   "anima.ui.general.regeneration.special.4.title": "",
   "anima.ui.general.regeneration.special.5.title": "Il ne reste aucune cicatrice",
-  "anima.ui.general.regeneration.special.6.title": "Le personnage ne subit pas les effets de l'exsanguination.",
-  "anima.ui.general.regeneration.special.7.title": "Les membres amputés proprement récupèrent s'ils sont attachés à la souche pendant une semaine.",
-  "anima.ui.general.regeneration.special.8.title": "Comme la précédente, mais en cinq jours",
-  "anima.ui.general.regeneration.special.9.title": "Comme la précédente, mais en trois jours. Le personnage surmonte automatiquement l'état entre la vie et la mort.",
+  "anima.ui.general.regeneration.special.6.title": "Le personnage ne souffre pas des effets des hémorragies.",
+  "anima.ui.general.regeneration.special.7.title": "Les membres amputés proprement se recollent si ils sont maintenus contre le moignon pendant une semaine.",
+  "anima.ui.general.regeneration.special.8.title": "Comme précédemment, mais en cinq jours",
+  "anima.ui.general.regeneration.special.9.title": "Comme précédemment, mais en trois jours. Le personnage sort automatiquement de l'état entre la vie et la mort.",
   "anima.ui.general.regeneration.title": "Régénération",
   "anima.ui.general.tabs.first": "Personnage",
   "anima.ui.general.tabs.second": "Détails",
@@ -258,8 +258,8 @@
   "anima.ui.mystic.magicLevel.spheres.fire.title": "Feu",
   "anima.ui.mystic.magicLevel.spheres.illusion.title": "Illusion",
   "anima.ui.mystic.magicLevel.spheres.light.title": "Lumière",
-  "anima.ui.mystic.magicLevel.spheres.necromancy.title": "Necromancie",
-  "anima.ui.mystic.magicLevel.spheres.title": "Niveau de Sphere",
+  "anima.ui.mystic.magicLevel.spheres.necromancy.title": "Nécromancie",
+  "anima.ui.mystic.magicLevel.spheres.title": "Niveau de Sphère",
   "anima.ui.mystic.magicLevel.spheres.water.title": "Eau",
   "anima.ui.mystic.magicLevel.total.title": "Total",
   "anima.ui.mystic.magicLevel.used.title": "Utilisé",
@@ -272,8 +272,8 @@
   "anima.ui.mystic.magicProjection.offensive.title": "Offensive",
   "anima.ui.mystic.magicProjection.title": "Projection Magique",
   "anima.ui.mystic.metamagic.grade.title": "Grade",
-  "anima.ui.mystic.metamagic.name.title": "Metamagie",
-  "anima.ui.mystic.metamagic.title": "Metamagies",
+  "anima.ui.mystic.metamagic.name.title": "Métamagie",
+  "anima.ui.mystic.metamagic.title": "Métamagies",
   "anima.ui.mystic.selectedSpells.cost.title": "Coût",
   "anima.ui.mystic.selectedSpells.name.title": "Sort",
   "anima.ui.mystic.selectedSpells.title": "Sorts sélectionnés",
@@ -289,7 +289,7 @@
   "anima.ui.mystic.spell.grade.intermediate.title": "Intermédiaire",
   "anima.ui.mystic.spell.grade.maintenanceCost.title": "Maint.",
   "anima.ui.mystic.spell.grade.zeon.title": "Zéon",
-  "anima.ui.mystic.spell.hasDailyMaintenance.title": "Maint. quotidien?",
+  "anima.ui.mystic.spell.hasDailyMaintenance.title": "Maint. quotidien ?",
   "anima.ui.mystic.spell.level.title": "Niveau",
   "anima.ui.mystic.spell.spellType.animatic.title": "Animique",
   "anima.ui.mystic.spell.spellType.attack.title": "Attaque",
@@ -301,7 +301,7 @@
   "anima.ui.mystic.spell.via.air.title": "Air",
   "anima.ui.mystic.spell.via.blood.title": "Sang",
   "anima.ui.mystic.spell.via.chaos.title": "Chaos",
-  "anima.ui.mystic.spell.via.creation.title": "Creation",
+  "anima.ui.mystic.spell.via.creation.title": "Création",
   "anima.ui.mystic.spell.via.darkness.title": "Obscurité",
   "anima.ui.mystic.spell.via.death.title": "Mort",
   "anima.ui.mystic.spell.via.destruction.title": "Destruction",
@@ -316,7 +316,7 @@
   "anima.ui.mystic.spell.via.light.title": "Lumière",
   "anima.ui.mystic.spell.via.literae.title": "Literae",
   "anima.ui.mystic.spell.via.musical.title": "Musique",
-  "anima.ui.mystic.spell.via.necromancy.title": "Necromancie",
+  "anima.ui.mystic.spell.via.necromancy.title": "Nécromancie",
   "anima.ui.mystic.spell.via.nobility.title": "Noblesse",
   "anima.ui.mystic.spell.via.peace.title": "Paix",
   "anima.ui.mystic.spell.via.sin.title": "Péché",
@@ -376,7 +376,7 @@
   "anima.ui.psychic.tabs.main": "Principal",
   "anima.ui.psychic.tabs.secondaries": "Pouvoirs",
   "anima.ui.resistances.disease": "Maladies",
-  "anima.ui.resistances.magic": "Magique",
+  "anima.ui.resistances.magic": "Mystique",
   "anima.ui.resistances.physical": "Physique",
   "anima.ui.resistances.poison": "Poisons",
   "anima.ui.resistances.psychic": "Psychique",
@@ -391,7 +391,7 @@
   "anima.ui.secondaries.athletics.title": "Compétences Athlétiques",
   "anima.ui.secondaries.climb.title": "Escalade",
   "anima.ui.secondaries.composure.title": "Impassibilité",
-  "anima.ui.secondaries.constructMarionettes.title": "Construction de Marionettes",
+  "anima.ui.secondaries.constructMarionettes.title": "Construction de Marionnettes",
   "anima.ui.secondaries.creative.title": "Compétences Créatives",
   "anima.ui.secondaries.dance.title": "Danse",
   "anima.ui.secondaries.disguise.title": "Déguisement",
@@ -402,7 +402,7 @@
   "anima.ui.secondaries.herbalLore.title": "Herboristerie",
   "anima.ui.secondaries.hide.title": "Camouflage",
   "anima.ui.secondaries.history.title": "Histoire",
-  "anima.ui.secondaries.intellectual.title": "Intellectual Abilities",
+  "anima.ui.secondaries.intellectual.title": "Compétences Intellectuelles",
   "anima.ui.secondaries.intimidate.title": "Intimidation",
   "anima.ui.secondaries.jewelry.title": "Orfèvrerie",
   "anima.ui.secondaries.jump.title": "Saut",
@@ -420,7 +420,7 @@
   "anima.ui.secondaries.persuasion.title": "Persuasion",
   "anima.ui.secondaries.piloting.title": "Piloter",
   "anima.ui.secondaries.poisons.title": "Poisons",
-  "anima.ui.secondaries.puppetMaking.title": "Fabrication de Poupée",
+  "anima.ui.secondaries.puppetMaking.title": "Fabrication de Poupées",
   "anima.ui.secondaries.ride.title": "Equitation",
   "anima.ui.secondaries.ritualCalligraphy.title": "Rituel Calligraphique",
   "anima.ui.secondaries.runes.title": "Runes",
@@ -435,7 +435,7 @@
   "anima.ui.secondaries.stealth.title": "Discrétion",
   "anima.ui.secondaries.streetwise.title": "Connaissance de la Rue",
   "anima.ui.secondaries.style.title": "Style",
-  "anima.ui.secondaries.subterfuge.title": "Compétence Clandestines",
+  "anima.ui.secondaries.subterfuge.title": "Compétences Clandestines",
   "anima.ui.secondaries.swim.title": "Natation",
   "anima.ui.secondaries.tactics.title": "Tactique",
   "anima.ui.secondaries.tailoring.title": "Fabrication",
@@ -461,7 +461,7 @@
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Arrondir au multiple de 5. Applicable aux dégâts",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "Arrondir à la baisse les dégâts (multiple de 5 le plus proche)?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Dans la gestion du sytème de combat, la case \"Show roll\" sera cochée par défaut en fonction de cette valeur",
-  "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Montrer les jets automitquement au MJ dans un combat",
+  "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Montrer les jets automatiquement au MJ dans un combat",
   "anima.ui.systemSettings.useCombatTable.title": "Utiliser la table de combat",
   "anima.ui.systemSettings.useCombatTable.hint.title": "Calculez les dégâts en utilisant la table de combat dans le Core Exxet pg. 334-335",
   "anima.ui.tabs.combat": "Combat",
@@ -478,7 +478,7 @@
   "anima.ui.weapons.one-handed.title": "1 main",
   "anima.ui.weapons.similar.title": "Similaire",
   "anima.ui.weapons.two-handed.title": "2 mains",
-  "chat.combatResult.counter.title": "{defender} peut countre-attaquer avec <b>{bonus}</b> de bonus",
+  "chat.combatResult.counter.title": "{defender} peut contre-attaquer avec <b>{bonus}</b> de bonus",
   "chat.combatResult.damage.title": "{defender} prend <b>{damage}</b> points de dégâts",
   "chat.combatResult.title": "Résultat du Combat",
   "contextualMenu.common.options.delete": "Supprimer",
@@ -496,7 +496,7 @@
   "dialogs.items.combatTable.content": "Nom de la table de Combats",
   "dialogs.items.contact.content": "Nom du Contact",
   "dialogs.items.creature.content": "Nom de la Créature",
-  "dialogs.items.delete.body": "Êtes vous sur?",
+  "dialogs.items.delete.body": "Êtes vous sûr ?",
   "dialogs.items.delete.title": "Suppression",
   "dialogs.items.disadvantage.content": "Nom du Désavantage",
   "dialogs.items.elan.content": "Nom de l'Elan",
@@ -505,13 +505,13 @@
   "dialogs.items.inventoryItem.content": "Nom de l'Objet",
   "dialogs.items.kiSkill.content": "Nom du Pouvoir du Ki",
   "dialogs.items.language.content": "Nom de la Langue",
-  "dialogs.items.level.content": "Nom de l'Archetype",
+  "dialogs.items.level.content": "Nom de l'Archétype",
   "dialogs.items.martialArt.content": "Nom de l'Art Martial",
   "dialogs.items.mentalPattern.content": "Nom de l'Attache Psychique",
-  "dialogs.items.metamagic.content": "Nom de la Metamagie",
-  "dialogs.items.nemesisSkill.content": "Nom du Pouvoir Nemesis",
+  "dialogs.items.metamagic.content": "Nom de la Métamagie",
+  "dialogs.items.nemesisSkill.content": "Nom du Pouvoir Némésis",
   "dialogs.items.note.content": "Contenu de la Note",
-  "dialogs.items.psychicDiscipline.content": "Discipline name",
+  "dialogs.items.psychicDiscipline.content": "Nom de la Discipline",
   "dialogs.items.psychicPower.content": "Nom du Pouvoir Psychique",
   "dialogs.items.secondarySkill.content": "Nom de la Compétence",
   "dialogs.items.selectedSpell.content": "Nom du sort sélectionné",
@@ -542,8 +542,8 @@
   "macros.combat.dialog.blockButton.title": "Essayez de Bloquer",
   "macros.combat.dialog.blockValue.title": "Valeur de Parade",
   "macros.combat.dialog.cancelButton.title": "Annulation",
-  "macros.combat.dialog.counterAttackBonus.title": "Bonus de Countre-attaque",
-  "macros.combat.dialog.counterAttackButton.title": "Countre-attaque",
+  "macros.combat.dialog.counterAttackBonus.title": "Bonus de Contre-attaque",
+  "macros.combat.dialog.counterAttackButton.title": "Contre-attaque",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Cette option déclenche une nouvelle attaque du défenseur",
   "macros.combat.dialog.critic.title": "Critique",
   "macros.combat.dialog.damage.title": "Dégâts",
@@ -571,13 +571,13 @@
   "macros.combat.dialog.error.noGMActive.title": "Actuellement le MJ n'est pas connecté. Vous ne pouvez pas attaquer.",
   "macros.combat.dialog.error.noSelectedActor.title": "Vous n'avez pas sélectionné un personnage",
   "macros.combat.dialog.error.noSelectedToken.title": "Vous n'avez pas sélectionné un attaquant",
-  "macros.combat.dialog.error.multipleSelectedToken.title": "Vous ne pouvez sélectionner qu'une seule attaquant",
-  "macros.combat.dialog.error.noTokenInCurrentScene.title": "Vous n'avez la possession d'aucun token dans la scène en cours",
+  "macros.combat.dialog.error.multipleSelectedToken.title": "Vous ne pouvez sélectionner qu'un seule attaquant",
+  "macros.combat.dialog.error.noTokenInCurrentScene.title": "Vous ne possédez aucun token sur la scène en cours",
   "macros.combat.dialog.error.notInActiveScene.title": "Vous ne pouvez pas attaquer tant que vous n'êtes pas dans une scène active",
   "macros.combat.dialog.error.oneTarget.title": "Vous devez sélectionner une cible",
   "macros.combat.dialog.error.requestRejected.title": "Votre demande d'attaque a été refusée",
   "macros.combat.dialog.error.withoutActor.title": "La cible n'a pas d'acteur associé",
-  "macros.combat.dialog.error.yourSelf.title": "Vous ne pouvez vous attaquer!",
+  "macros.combat.dialog.error.yourSelf.title": "Vous ne pouvez pas vous attaquer vous-même !",
   "macros.combat.dialog.fatigue.title": "Points de Fatigue",
   "macros.combat.dialog.fatigueUsed.title": "Fatigue utilisée",
   "macros.combat.dialog.magicAttack.title": "Lancer le sort {spell} sur {target}",
@@ -607,8 +607,8 @@
   "macros.combat.dialog.spell.title": "Sort",
   "macros.combat.dialog.spellGrade.advanced.title": "Avancé",
   "macros.combat.dialog.spellGrade.arcane.title": "Arcane",
-  "macros.combat.dialog.spellGrade.base.title": "Initiale",
-  "macros.combat.dialog.spellGrade.intermediate.title": "Intermédaire",
+  "macros.combat.dialog.spellGrade.base.title": "Initial",
+  "macros.combat.dialog.spellGrade.intermediate.title": "Intermédiaire",
   "macros.combat.dialog.spellGrade.title": "Degré du sort",
   "macros.combat.dialog.total.title": "Total",
   "macros.combat.dialog.waitRequest.title": "Attaque envoyée. Attente de la réponse du MJ...",
