Ajustements sur la taduction FR / light changes on FR translation.

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -33,10 +33,10 @@
   "anima.ui.combat.ammo.quality.title": "Qualité",
   "anima.ui.combat.ammo.special.title": "Spécial",
   "anima.ui.combat.ammo.title": "Munitions",
-  "anima.ui.combat.armors.at.cold.base.title": "FR",
-  "anima.ui.combat.armors.at.cold.title": "FR",
-  "anima.ui.combat.armors.at.cut.base.title": "TR",
-  "anima.ui.combat.armors.at.cut.title": "TR",
+  "anima.ui.combat.armors.at.cold.base.title": "FRO",
+  "anima.ui.combat.armors.at.cold.title": "FRO",
+  "anima.ui.combat.armors.at.cut.base.title": "TRA",
+  "anima.ui.combat.armors.at.cut.title": "TRA",
   "anima.ui.combat.armors.at.electricity.base.title": "ELE",
   "anima.ui.combat.armors.at.electricity.title": "ELE",
   "anima.ui.combat.armors.at.energy.base.title": "ENE",
@@ -458,6 +458,8 @@
   "anima.ui.settings.advancedSettings.fumbles.title": "Marge de Fumble",
   "anima.ui.settings.advancedSettings.openRolls.title": "Marge d'ouverte",
   "anima.ui.settings.advancedSettings.title": "Paramètres avancés",
+  "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Accepter automatiquement les demandes de combat",
+  "anima.ui.systemSettings.autoAcceptCombatRequests.hint.title": "Dans le combat autogéré, les demandes de combat au MJ seront automatiquement acceptées en fonction de si cette option est activée",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Arrondir au multiple de 5. Applicable aux dégâts",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "Arrondir à la baisse les dégâts (multiple de 5 le plus proche)?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Dans la gestion du sytème de combat, la case \"Show roll\" sera cochée par défaut en fonction de cette valeur",
@@ -522,14 +524,14 @@
   "dialogs.items.technique.content": "Nom de la Technique",
   "dialogs.items.title.content": "Nom du Titre",
   "dialogs.items.weapons.content": "Nom de l'Arme",
-  "dialogs.mod.content": "Modifier",
+  "dialogs.mod.content": "Modificateur",
   "dialogs.title": "Dialogue",
-  "macros.combat.dialog.applyAndCloseButton.title": "Appliquez et fermez",
-  "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Appliquez les changement chez les acteurs comme les points de fatigue utilisés ou les dégâts",
+  "macros.combat.dialog.applyAndCloseButton.title": "Appliquer et fermer",
+  "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Appliquer les changements chez les acteurs, tels que les points de fatigue utilisés ou les dégâts sur les fiches de personnages concernés",
   "macros.combat.dialog.at.title": "IP",
   "macros.combat.dialog.attack.title": "Attaque",
-  "macros.combat.dialog.attackButton.title": "Envoyez l'attaque",
-  "macros.combat.dialog.attackConfirm.body.title": "Voulez vous attaquer {target}?",
+  "macros.combat.dialog.attackButton.title": "Envoyer l'attaque",
+  "macros.combat.dialog.attackConfirm.body.title": "Voulez-vous attaquer {target}?",
   "macros.combat.dialog.attackConfirm.title": "Attaque confirmée",
   "macros.combat.dialog.attackSent.title": "Attaque envoyée. Attente des résultats du combat...",
   "macros.combat.dialog.attackType.combat.title": "Physique",
@@ -554,7 +556,7 @@
   "macros.combat.dialog.defending.defend.title": "Défense",
   "macros.combat.dialog.defending.title": "Se défendre de ",
   "macros.combat.dialog.defense.title": "Défense",
-  "macros.combat.dialog.defenseButton.title": "Envoyez la défense",
+  "macros.combat.dialog.defenseButton.title": "Envoyer la défense",
   "macros.combat.dialog.defenseCount.title": "Malus de Défense",
   "macros.combat.dialog.defenseSent.title": "Défense envoyée. Attente des résultats du combat...",
   "macros.combat.dialog.defenseType.block.title": "Parade",
