WIP combat automation

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -280,6 +280,7 @@
   "anima.ui.mystic.spell.actionType.active.title": "Active",
   "anima.ui.mystic.spell.actionType.passive.title": "Passive",
   "anima.ui.mystic.spell.actionType.title": "Action",
+  "anima.ui.mystic.spell.critic.title": "Critic",
   "anima.ui.mystic.spell.cost.title": "Cost",
   "anima.ui.mystic.spell.grade.advanced.title": "Advanced",
   "anima.ui.mystic.spell.grade.arcane.title": "Arcane",
@@ -290,6 +291,7 @@
   "anima.ui.mystic.spell.grade.maintenanceCost.title": "Maint.",
   "anima.ui.mystic.spell.grade.zeon.title": "Zeon",
   "anima.ui.mystic.spell.hasDailyMaintenance.title": "Daily Mant.?",
+  "anima.ui.mystic.spell.visible.title": "Visible",
   "anima.ui.mystic.spell.level.title": "Level",
   "anima.ui.mystic.spell.spellType.animatic.title": "Animatic",
   "anima.ui.mystic.spell.spellType.attack.title": "Attack",
@@ -359,10 +361,25 @@
   "anima.ui.psychic.psychicPotential.title": "Psychic potential",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Active",
   "anima.ui.psychic.psychicPowers.actionType.passive.title": "Passive",
+  "anima.ui.psychic.psychicPowers.actionType.attack.title": "Attack",
+  "anima.ui.psychic.psychicPowers.actionType.defense.title": "Defense",
+  "anima.ui.psychic.psychicPowers.discipline.telepathy.title": "Telepathy",
+  "anima.ui.psychic.psychicPowers.discipline.telekenisis.title": "Telekenisis",
+  "anima.ui.psychic.psychicPowers.discipline.pyrokinesis.title": "Pyrokinesis",
+  "anima.ui.psychic.psychicPowers.discipline.cryokinesis.title": "Cryokinesis",
+  "anima.ui.psychic.psychicPowers.discipline.physicalIncrease.title": "Physical Inc.",
+  "anima.ui.psychic.psychicPowers.discipline.energy.title": "Energy",
+  "anima.ui.psychic.psychicPowers.discipline.telemetry.title": "Telemetry",
+  "anima.ui.psychic.psychicPowers.discipline.sentient.title": "Sentient",
+  "anima.ui.psychic.psychicPowers.discipline.matrial.title": "-",
   "anima.ui.psychic.psychicPowers.power.footer.actionType.title": "Action",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bonus",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Maint.",
+  "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
+  "anima.ui.psychic.psychicPowers.power.footer.critic.title": "Critic",
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Level",
+  "anima.ui.psychic.psychicPowers.power.header.discipline.title": "Dis.",
+  "anima.ui.psychic.psychicPowers.power.header.macro.title": "Macro",
   "anima.ui.psychic.psychicPowers.title": "Psychic Powers",
   "anima.ui.psychic.psychicProjection.projection.title": "Projection",
   "anima.ui.psychic.psychicProjection.title": "Psychic projection",
@@ -547,6 +564,7 @@
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "This option will execute a new attack from the defender",
+  "macros.combat.dialog.rollResistanceButtonTooltip.title": "This option will execute a new roll from the defender",
   "macros.combat.dialog.critic.title": "Critic",
   "macros.combat.dialog.damage.title": "Damage",
   "macros.combat.dialog.damageDeal.title": "Damage deal",
@@ -591,6 +609,9 @@
   "macros.combat.dialog.modal.attack.title": "Attacking",
   "macros.combat.dialog.modifier.title": "Modifier",
   "macros.combat.dialog.noRoll.title": "Without dice roll",
+  "macros.combat.dialog.poorVisibility.title": "Poor visibility",
+  "macros.combat.dialog.targetInCover.title": "Target in Cover",
+  "macros.combat.dialog.highGround.title": "High ground",
   "macros.combat.dialog.notEnoughFatigue.title": "Don't have enough fatigue points to use",
   "macros.combat.dialog.physicalAttack.title": "Try to hit with {weapon} to {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, unarmed, to {target}",
