--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -280,6 +280,7 @@
   "anima.ui.mystic.spell.actionType.active.title": "Activo",
   "anima.ui.mystic.spell.actionType.passive.title": "Pasivo",
   "anima.ui.mystic.spell.actionType.title": "Acción",
+  "anima.ui.mystic.spell.critic.title": "Crítico",
   "anima.ui.mystic.spell.cost.title": "Coste",
   "anima.ui.mystic.spell.grade.advanced.title": "Avanzado",
   "anima.ui.mystic.spell.grade.arcane.title": "Arcano",
@@ -290,6 +291,7 @@
   "anima.ui.mystic.spell.grade.maintenanceCost.title": "Mant.",
   "anima.ui.mystic.spell.grade.zeon.title": "Zeón",
   "anima.ui.mystic.spell.hasDailyMaintenance.title": "¿Mant. Diario?",
+  "anima.ui.mystic.spell.visible.title": "Visible",
   "anima.ui.mystic.spell.level.title": "Nivel",
   "anima.ui.mystic.spell.spellType.animatic.title": "Anímica",
   "anima.ui.mystic.spell.spellType.attack.title": "Ataque",
@@ -359,10 +361,25 @@
   "anima.ui.psychic.psychicPotential.title": "Potencial Psíquico",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Activo",
   "anima.ui.psychic.psychicPowers.actionType.passive.title": "Pasivo",
+  "anima.ui.psychic.psychicPowers.actionType.attack.title": "Ataque",
+  "anima.ui.psychic.psychicPowers.actionType.defense.title": "Defensa",
+  "anima.ui.psychic.psychicPowers.discipline.telepathy.title": "Telepatía",
+  "anima.ui.psychic.psychicPowers.discipline.telekenisis.title": "Telequinesis",
+  "anima.ui.psychic.psychicPowers.discipline.pyrokinesis.title": "Piroquinesis",
+  "anima.ui.psychic.psychicPowers.discipline.cryokinesis.title": "Crioquinesis",
+  "anima.ui.psychic.psychicPowers.discipline.physicalIncrease.title": "Inc. Físico",
+  "anima.ui.psychic.psychicPowers.discipline.energy.title": "Energía",
+  "anima.ui.psychic.psychicPowers.discipline.telemetry.title": "Telemetría",
+  "anima.ui.psychic.psychicPowers.discipline.sentient.title": "Sentiente",
+  "anima.ui.psychic.psychicPowers.discipline.matrial.title": "-",
   "anima.ui.psychic.psychicPowers.power.footer.actionType.title": "Acción",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bono",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Mant.",
+  "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
+  "anima.ui.psychic.psychicPowers.power.footer.critic.title": "Crítico",
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Nivel",
+  "anima.ui.psychic.psychicPowers.power.header.discipline.title": "Disc.",
+  "anima.ui.psychic.psychicPowers.power.header.macro.title": "Macro",
   "anima.ui.psychic.psychicPowers.title": "Poderes Psíquicos",
   "anima.ui.psychic.psychicProjection.projection.title": "Proyección",
   "anima.ui.psychic.psychicProjection.title": "Projecc. Psíquica",
@@ -545,6 +562,7 @@
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Esta opción permitirá al defensor realizar un contraataque directamente",
+  "macros.combat.dialog.rollResistanceButtonTooltip.title": "Esta opción enviara una tirada de resistencia",
   "macros.combat.dialog.critic.title": "Crítico",
   "macros.combat.dialog.damage.title": "Daño",
   "macros.combat.dialog.damageDeal.title": "Daño hecho",
@@ -591,6 +609,9 @@
   "macros.combat.dialog.modal.attack.title": "Atacando",
   "macros.combat.dialog.modifier.title": "Modificador",
   "macros.combat.dialog.noRoll.title": "Sin tirar dado",
+  "macros.combat.dialog.poorVisibility.title": "Escasa visibilidad",
+  "macros.combat.dialog.targetInCover.title": "Blanco en cobertura",
+  "macros.combat.dialog.highGround.title": "Terreno elevado",
   "macros.combat.dialog.notEnoughFatigue.title": "No tienes puntos de cansancio para usar",
   "macros.combat.dialog.physicalAttack.title": "Intenta golpear con su {weapon} a {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, desarmado, a {target}",
