--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -475,6 +475,12 @@
   "anima.ui.settings.advancedSettings.fumbles.title": "Fumble Range",
   "anima.ui.settings.advancedSettings.openRolls.title": "Open Roll Range",
   "anima.ui.settings.advancedSettings.title": "Advanced Settings",
+  "anima.ui.settings.advancedCharacteristics.zen": "Zen",
+  "anima.ui.settings.advancedCharacteristics.inhuman": "Inhuman",
+  "anima.ui.settings.advancedCharacteristics.inmaterial": "Inmaterial",
+  "anima.ui.settings.advancedCharacteristics.perceiveMystic": "Perceive Mystic",
+  "anima.ui.settings.advancedCharacteristics.perceivePsychic": "Perceive Psychic",
+  "anima.ui.settings.advancedCharacteristics.title": "Advanced Characteristics",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Floor items in multiples of 5. Applies for damage",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Floor calculated damage in multiples of 5?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Inside managed combat system, the \"Show roll\" checkbox will be checked by default depending on this value",
