--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -569,6 +569,7 @@
   "macros.combat.dialog.cancelButton.title": "Cancel",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
+  "macros.combat.dialog.rollResistanceButton.title": "Roll Resistance",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "This option will execute a new attack from the defender",
   "macros.combat.dialog.rollResistanceButtonTooltip.title": "This option will execute a new roll from the defender",
   "macros.combat.dialog.critic.title": "Critic",
@@ -623,6 +624,7 @@
   "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, unarmed, to {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Try to block the attack from {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Try to dodge the attack from {target}",
+  "macros.combat.dialog.physicalDefense.resist.title": "Try to resist the attack from {target}",
   "macros.combat.dialog.psychicAttack.title": "Attacks with the mental power {power} to {target} with {potential} potential",
   "macros.combat.dialog.psychicDefense.title": "Defends with the mental power {power} from {target}",
   "macros.combat.dialog.psychicPotential.title": "Psychic potential",
@@ -632,6 +634,7 @@
   "macros.combat.dialog.rolled.title": "Dice rolled",
   "macros.combat.dialog.showResultsButton.title": "Send to chat the results",
   "macros.combat.dialog.showRoll.title": "Show roll",
+  "macros.combat.dialog.combat.accumulateDefenses.title": "Accumulate defense",
   "macros.combat.dialog.surprised.title": "Surprised",
   "macros.combat.dialog.spell.title": "Spell",
   "macros.combat.dialog.spellGrade.advanced.title": "Advanced",
