--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -567,6 +567,7 @@
   "macros.combat.dialog.cancelButton.title": "Cancelar",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
+  "macros.combat.dialog.rollResistanceButton.title": "Tirada de Resistancia",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Esta opción permitirá al defensor realizar un contraataque directamente",
   "macros.combat.dialog.rollResistanceButtonTooltip.title": "Esta opción enviara una tirada de resistencia",
   "macros.combat.dialog.critic.title": "Crítico",
@@ -623,6 +624,7 @@
   "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, desarmado, a {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Intenta bloquear el ataque {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Intenta esquivar el ataque {target}",
+  "macros.combat.dialog.physicalDefense.resist.title": "Intenta resistir el ataque de {target}",
   "macros.combat.dialog.psychicAttack.title": "Ataca con el poder mental {power} a {target} con un potencial de {potential}",
   "macros.combat.dialog.psychicDefense.title": "Se defiende con el poder mental {power} de {target}",
   "macros.combat.dialog.psychicPotential.title": "Potencial Psíquico",
@@ -632,6 +634,7 @@
   "macros.combat.dialog.rolled.title": "Tirada del dado",
   "macros.combat.dialog.showResultsButton.title": "Enviar al chat los resultados",
   "macros.combat.dialog.showRoll.title": "Mostrar tirada",
+  "macros.combat.dialog.combat.accumulateDefenses.title": "Acumular defensa",
   "macros.combat.dialog.surprised.title": "Sorprendido",
   "macros.combat.dialog.spell.title": "Hechizo",
   "macros.combat.dialog.spellGrade.advanced.title": "Avanzado",
