fixed combat automation

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -342,6 +342,7 @@
   "anima.ui.mystic.zeon.accumulated.title": "Acumulado",
   "anima.ui.mystic.zeon.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
+  "anima.ui.mystic.zeonMaintained.title": "Mantenido",
   "anima.ui.mystic.zeonRegeneration.final.title": "Final",
   "anima.ui.mystic.zeonRegeneration.title": "Regen. Zeon",
   "anima.ui.notesSection.title": "Notas",
