--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -342,6 +342,7 @@
   "anima.ui.mystic.zeon.accumulated.title": "Accumulated",
   "anima.ui.mystic.zeon.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
+  "anima.ui.mystic.zeonMaintained.title": "Maintained",
   "anima.ui.mystic.zeonRegeneration.final.title": "Final",
   "anima.ui.mystic.zeonRegeneration.title": "Zeon regen.",
   "anima.ui.notesSection.title": "Notes",
